# bis-takehome

./: .gitignore  Cargo.toml  Dockerfile  README.md  api-doc.json
crates/bis-api/: Cargo.toml
crates/bis-api/src/: api.rs  configuration.rs  docs.rs  error.rs  lib.rs  main.rs  startup.rs
crates/bis-api/tests/: health_check.rs
crates/bis-in-memory/: Cargo.toml
crates/bis-in-memory/src/: lib.rs  models.rs
crates/bis-store/: Cargo.toml
