[package]
name = "bis-api"
version = "0.1.0"
description = "Api for interacting via CRUD actions with Book Information Store"

repository.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
serde = { version = "1.0.208", features = ["derive"] }
chrono = "0.4.38"
derive_more = "0.99.7"
log = "0.4.22"
env_logger = "0.11.5"
actix-web = "4.9.0"
bis-in-memory = { path = "../bis-in-memory" }
dotenvy = "0.15.7"
