[package]
name = "bis-in-memory"
version = "0.1.0"
description = "Simple in memory storage for BIS"


rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.208", features = ["derive"] }

[lints]
workspace = true
